--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.5",
-    "@astrojs/check": "^0.9.3",
+    "microcms-js-sdk": "^3.1.2",
     "typescript": "^5.5.4"
   }
 }
