--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@vercel/speed-insights": "^1.0.12",
     "astro": "^4.14.5",
     "microcms-js-sdk": "^3.1.2",
     "typescript": "^5.5.4"
